Fri Feb 18 02:32:53 1994  Gray Watson  (gray@fridge.antaire.com)

	* Fixed tons of __STDC__ defines.  Finally I hope.

	* Released version 2.0.0.

	* Last minute fixes from Sparc and MIPS boxes.

Thu Feb 17 17:47:05 1994  Gray Watson  (gray@fridge.antaire.com)

	* Lots of changes to add argv files in place of argv subdir.

	* added initial support for external block locating.  this is
	going to be a toughy to solve.  there is a catch-22 here.

Sat Jan 22 01:34:55 1994  Gray Watson  (gray@fridge.antaire.com)

	* moved BLOCK_SIZE into malloc_log because its used everywhere.

Fri Jan 21 23:45:26 1994  Gray Watson  (gray@fridge.antaire.com)

	* added missing checks for ADMIN_FREE in heap_check

Wed Jan 19 20:43:05 1994  Gray Watson  (gray at toaster.antaire.com)

	* Added a new texinfo.tex macro file.

	* Renamed CHECK_FREE to CHECK_BLANK internally.

	* Added 'allow-nonlinear' token to remove special checks.

Mon Dec 20 14:14:08 1993  Gray Watson  (gray@fridge.antaire.com)

	* Added a -m max-amount flag to malloc_t.

	* Renamed dbg_tokens.h -> debug_tok.h and dbg_values.h -> debug_val.h

Mon Dec 20 02:24:02 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added -V option to malloc_dbg and desc field for debug-token list.

Sun Dec 19 23:35:53 1993  Gray Watson  (gray at toaster.antaire.com)

	* moved the NULLs in malloc_dbg.h to 0L.

	* added a debugging section to the manual and moved some stuff
	around.

Fri Dec 17 15:02:29 1993  Gray Watson  (gray at toaster.antaire.com)

	* fixed some compilation errors with non-STDC systems re
	Charles Campbell.

Mon Dec  6 01:18:29 1993  Gray Watson  (gray@fridge.antaire.com)

	* new fence read/write code.  much cleaner.  new FENCE_TOP define.

Tue Nov 30 05:35:39 1993  Gray Watson  (gray@fridge.antaire.com)

	* added special tests to malloc_t.  cleaned up and tested
	alloc(0).

Mon Nov 29 21:39:54 1993  Gray Watson  (gray@fridge.antaire.com)

	* turned num_bits into a macro and condenced log_heap_map.  added