@@ -34,30 +34,8 @@
 
 #if INCLUDE_RCS_IDS
 LOCAL	char	*rcs_id =
-  "$Id: compat.c,v 1.25 1994/02/18 07:34:11 gray Exp $";
+  "$Id: compat.c,v 1.26 1994/02/20 05:40:36 gray Exp $";
 #endif
-
-#if HAVE_GETPID == 0
-/*
- * return a fake pid for brain-dead systems without getpid()
- */
-EXPORT	int	getpid(void)
-{
-  return 0;
-}
-#endif /* HAVE_GETPID == 0 */
-
-#if HAVE_TIME == 0
-/*
- * return a fake time for brain-dead systems without time()
- */
-EXPORT	long	time(long * timep)
-{
-  if (timep != NULL)
-    *timep = 0L;
-  return 0L;
-}
-#endif /* HAVE_TIME == 0 */
 
 #if HAVE_BCOPY == 0
 /*
@@ -101,21 +79,27 @@ EXPORT	int	bcmp(const char * str1, const char * str2, MALLOC_SIZE len)
 }
 #endif /* HAVE_BCMP == 0 */
 
-#if HAVE_MEMSET == 0
+#if HAVE_GETPID == 0
 /*
- * set LEN characters in STR to character CH
- * NOTE: remember Gray, there is no bset().
+ * return a fake pid for brain-dead systems without getpid()
  */
-EXPORT	char	*memset(char * str, int ch, MALLOC_SIZE len)
+EXPORT	int	getpid(void)
 {
-  char	*hold = str;
-  
-  for (; len > 0; len--, str++)
-    *str = (char)ch;
-  
-  return hold;
+  return 0;
 }
-#endif /* HAVE_MEMSET == 0 */
+#endif /* HAVE_GETPID == 0 */
+
+#if HAVE_TIME == 0
+/*
+ * return a fake time for brain-dead systems without time()
+ */
+EXPORT	long	time(long * timep)
+{
+  if (timep != NULL)
+    *timep = 0L;
+  return 0L;
+}
+#endif /* HAVE_TIME == 0 */
 
 #if HAVE_INDEX == 0
 /*
@@ -133,6 +117,22 @@ EXPORT	char	*index(const char * str, int ch)
     return NULL;
 }
 #endif /* HAVE_INDEX == 0 */
+
+#if HAVE_MEMSET == 0
+/*
+ * set LEN characters in STR to character CH
+ * NOTE: remember Gray, there is no bset().
+ */
+EXPORT	char	*memset(char * str, int ch, MALLOC_SIZE len)
+{
+  char	*hold = str;
+  
+  for (; len > 0; len--, str++)
+    *str = (char)ch;
+  
+  return hold;
+}
+#endif /* HAVE_MEMSET == 0 */
 
 #if HAVE_RINDEX == 0
 /*
@@ -171,6 +171,33 @@ EXPORT	char	*strcat(char * str1, const char * str2)
 }
 #endif /* HAVE_STRCAT == 0 */
 
+#if HAVE_STRCMP == 0
+/*
+ * returns -1,0,1 on whether STR1 is <,==,> STR2
+ */
+EXPORT	int	strcmp(const char * str1, const char * str2)
+{
+  for (; *str1 != NULLC && *str1 == *str2; str1++, str2++);
+  return *str1 - *str2;
+}
+#endif /* HAVE_STRCMP == 0 */
+
+#if HAVE_STRCPY == 0
+/*
+ * copies STR2 to STR1.  returns STR1
+ */
+EXPORT	char	*strcpy(char * str1, const char * str2)
+{
+  char	*strp;
+  
+  for (strp = str1; *str2 != NULLC; strp++, str2++)
+    *strp = *str2;
+  *strp = NULLC;
+  
+  return str1;
+}
+#endif /* HAVE_STRCPY == 0 */
+
 #if HAVE_STRDUP == 0
 /*
  * alloc space for PTR (with NULL) and copy it to new space, user must free
@@ -189,17 +216,6 @@ EXPORT	char	*strdup(const char * ptr)
 }
 #endif
 
-#if HAVE_STRCMP == 0
-/*
- * returns -1,0,1 on whether STR1 is <,==,> STR2
- */
-EXPORT	int	strcmp(const char * str1, const char * str2)
-{
-  for (; *str1 != NULLC && *str1 == *str2; str1++, str2++);
-  return *str1 - *str2;
-}
-#endif /* HAVE_STRCMP == 0 */
-
 #if HAVE_STRLEN == 0
 /*
  * return the length in characters of STR
@@ -213,6 +229,65 @@ EXPORT	MALLOC_SIZE	strlen(const char * str)
   return len;
 }
 #endif /* HAVE_STRLEN == 0 */
+
+#if HAVE_STRNCMP == 0
+/*
+ * compare at most LEN chars in STR1 and STR2 and return -1,0,1 or STR1 - STR2
+ */
+EXPORT	int	strncmp(const char * str1, const char * str2, const int len)
+{
+  int	len;
+  
+  for (lenc = 0; lenc < len; lenc++, str1++, str2++)
+    if (*str1 != *str2 || *str1 == NULLC)
+      return *str1 - *str2;
+  
+  return 0;
+}
+#endif /* HAVE_STRNCMP == 0 */
+
+#if HAVE_STRNCPY == 0
+/*
+ * copy STR2 to STR1 until LEN or null
+ */
+EXPORT	char	*strncpy(char * str1, const char * str2, const int len)
+{
+  char		*str1p, null_reached = FALSE;
+  int		lenc;
+  
+  for (lenc = 0, str1p = str1; lenc < len; lenc++, str1p++, str2++)
+    if (null_reached || *str2 == NULLC) {
+      null_reached = TRUE;
+      *str1p = NULLC;
+    }
+    else
+      *str1p = *str2;
+  
+  return str1;
+}
+#endif /* HAVE_STRNCPY == 0 */
+
+#if HAVE_STRSTR == 0
+/*
+ * find STR2 inside STR1, returns NULL if not found
+ */
+EXPORT	char	*strstr(const char * str1, const char * str2)
+{
+  int		len1, len2;
+  
+  /* find the 2 lengths */
+  len1 = strlen(str1);
+  len2 = strlen(str2);
+  len1 -= len2;
+  
+  /* look for the string */
+  for (; len1 >= 0; len1--, str1++)
+    if (strncmp(str1, str2, len2) == 0)
+      return (char *)str1;
+  
+  return NULL;
+}
+#endif
 
 #if HAVE_STRTOK == 0
 /*
