@@ -1,6 +1,12 @@
+Sun Feb 20 00:39:37 1994  Gray Watson  (gray at toaster.antaire.com)
+
+	* Cleaned up a number of configure/compat functions.
+
 Fri Feb 18 02:32:53 1994  Gray Watson  (gray@fridge.antaire.com)
 
 	* Fixed tons of __STDC__ defines.  Finally I hope.
+
+	* Added more commands to malloc_t to log information, etc.
 
 	* Released version 2.0.0.
 
@@ -643,5 +649,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray at toaster)
 	when MALLOC_ADDRESS was not working correctly.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.92 1994/02/18 23:19:23 gray Exp $
+$Id: ChangeLog,v 1.93 1994/02/20 05:40:29 gray Exp $
 -------------------------------------------------------------------------------
